# yourplace

./: .gitignore  Cargo.toml  LICENSE.md  README.md  apply  flake.nix  postgrestools.jsonc
.sqlx/: query-062c5a81585f1196f8e9f71863a3f5f02065768715dd637143acb034e9fc7f0b.json  query-28dbd618e533d59408687cc53312aa47141ef9a3842b60d78f9998b87ee6cb07.json  query-29b216094d3d32076f8d62adac7bc38351082c9878d6ba6c408671b67850dc70.json  query-373ca81854d4e404491f9a30aa868b54ed6311791fd1deb183f55856d53f4f95.json  query-96989f0fe12705701795bbbb0098b3dd14a0b0d91c2f8c74818a3b977abbbc3a.json  query-f27dd4e85fe2c51e6831f3febd68c2229a33b8e20c4d72515c3b86ffe75ffed5.json
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/models/: avatar.rs  coins.rs  community.rs  mod.rs  pixel.rs  user.rs
crates/database/src/utils/: color.rs  error.rs  mod.rs
migrations/: 20250328213115_add_users.up.sql  20250820173024_add_pixel.down.sql  20250820173024_add_pixel.up.sql  20250827183635_add_user_avatar.down.sql  20250827183635_add_user_avatar.up.sql  20250902022705_add_user_level.down.sql  20250902022705_add_user_level.up.sql  20251011120000_add_communities_and_canvas.down.sql  20251011120000_add_communities_and_canvas.up.sql  20251011121000_add_coin_wallet.down.sql  20251011121000_add_coin_wallet.up.sql
server/: Cargo.toml
server/src/: config.rs  lib.rs  state.rs
server/src/routes/: mod.rs
server/src/routes/auth/: discord.rs  mod.rs
server/src/routes/canvas/: mod.rs
server/src/routes/community/: mod.rs
server/src/routes/hello/: mod.rs  world.rs
(+1 files in other folders)
