[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
eserde.workspace = true
serde.workspace = true
chrono.workspace = true
actix-web.workspace = true
actix_failwrap.workspace = true
uuid = "1.18.0"
serde_json = "1.0.143"

[dependencies.macros_utils]
path = "../macros_utils"
default-features = false
features = ["ternary"]
